# mytool

./: .gitignore  LICENSE  README.md  chat.md  pyproject.toml
src/mytool/: cli.py  core.py  logging_conf.py
tests/: test_cli.py  test_core.py
